apps/filebrowser/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: filebrowser
