apps/filebrowser/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Filebrowser
    gethomepage.dev/description: File Manager
    gethomepage.dev/group: Services
    gethomepage.dev/icon: filebrowser
    gethomepage.dev/href: https://files.cyphers.app
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`files.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: filebrowser
          namespace: filebrowser
          port: 80
  tls:
    secretName: production-cyphers-app-tls
